feat(docs): implement copy-paste UI component system

--- a/apps/docs/src/content/getting-started/ui.mdx
+++ b/apps/docs/src/content/getting-started/ui.mdx
@@ -13,13 +13,13 @@ description: A collection of UI components.
 ## Installation
 
 ```bash
-npm i @tszhong0411/ui @tszhong0411/utils
+npm i @tszhong0411/utils cva@1.0.0-beta.4 lucide-react
 # or
-pnpm add @tszhong0411/ui @tszhong0411/utils
+pnpm add @tszhong0411/utils cva@1.0.0-beta.4 lucide-react
 # or
-yarn add @tszhong0411/ui @tszhong0411/utils
+yarn add @tszhong0411/utils cva@1.0.0-beta.4 lucide-react
 # or
-bun add @tszhong0411/ui @tszhong0411/utils
+bun add @tszhong0411/utils cva@1.0.0-beta.4 lucide-react
 ```
 
 ```css title='globals.css'
@@ -27,8 +27,6 @@ bun add @tszhong0411/ui @tszhong0411/utils
 @import '@tszhong0411/ui/styles/preset.css';
 @import '@tszhong0411/ui/styles/shiki.css'; /* Optional */
 @import '@tszhong0411/ui/styles/typography.css'; /* Optional */
-/* Make sure it's pointing to the ROOT node_modules folder  */
-@source '../../node_modules/@tszhong0411/ui/dist/**/*.js';
 ```
 
 ## Usage
