--- a/apps/docs/src/content/ui/accordion.mdx
+++ b/apps/docs/src/content/ui/accordion.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='accordion/accordion' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/accordion.tsx']} deps={['@radix-ui/react-accordion']} />
+
 ## Usage
 
 ```tsx
