--- a/apps/docs/src/content/ui/alert-dialog.mdx
+++ b/apps/docs/src/content/ui/alert-dialog.mdx
@@ -8,6 +8,10 @@ link:
 
 <ComponentPreview name='alert-dialog/alert-dialog' />
 
+## Installation
+
+<ComponentInstallation paths={['components/alert-dialog.tsx']} deps={['@radix-ui/react-alert-dialog']} />
+
 ## Usage
 
 ```tsx
