--- a/apps/docs/src/content/ui/badge.mdx
+++ b/apps/docs/src/content/ui/badge.mdx
@@ -5,6 +5,11 @@ description: Displays a badge or a component that looks like a badge.
 
 <ComponentPreview name='badge/badge' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/badge.tsx']} deps={['@radix-ui/react-slot']} />
+
 ## Usage
 
 ```tsx
