--- a/apps/docs/src/content/ui/breadcrumb.mdx
+++ b/apps/docs/src/content/ui/breadcrumb.mdx
@@ -5,6 +5,11 @@ description: Displays the path to the current resource using a hierarchy of link
 
 <ComponentPreview name='breadcrumb/breadcrumb' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/breadcrumb.tsx']} deps={['@radix-ui/react-slot']} />
+
 ## Usage
 
 ```tsx
