--- a/apps/docs/src/content/ui/button.mdx
+++ b/apps/docs/src/content/ui/button.mdx
@@ -5,6 +5,10 @@ description: A clickable element that triggers an action or event.
 
 <ComponentPreview name='button/button' />
 
+## Installation
+
+<ComponentInstallation paths={['components/button.tsx']} />
+
 ## Usage
 
 ```tsx
