--- a/apps/docs/src/content/ui/calendar.mdx
+++ b/apps/docs/src/content/ui/calendar.mdx
@@ -5,6 +5,10 @@ description: A date field component that allows users to enter and edit date.
 
 <ComponentPreview name='calendar/calendar' />
 
+## Installation
+
+<ComponentInstallation paths={['components/calendar.tsx']} deps={['react-day-picker@8.10.1']} />
+
 ## Usage
 
 ```tsx
