--- a/apps/docs/src/content/ui/card.mdx
+++ b/apps/docs/src/content/ui/card.mdx
@@ -5,6 +5,11 @@ description: A container for grouping related information.
 
 <ComponentPreview name='card/card' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/card.tsx']} />
+
 ## Usage
 
 ```tsx
