--- a/apps/docs/src/content/ui/carousel.mdx
+++ b/apps/docs/src/content/ui/carousel.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='carousel/carousel' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/carousel.tsx']} deps={['embla-carousel-react']} />
+
 ## Usage
 
 ```tsx
