--- a/apps/docs/src/content/ui/chart.mdx
+++ b/apps/docs/src/content/ui/chart.mdx
@@ -5,6 +5,11 @@ description: Beautiful charts. Built using Recharts. Copy and paste into your ap
 
 <ComponentPreview name='chart/chart' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/chart.tsx']} deps={['recharts']} />
+
 ## Usage
 
 See [shadcn/ui chart](https://ui.shadcn.com/docs/components/chart) for more information.
