--- a/apps/docs/src/content/ui/checkbox.mdx
+++ b/apps/docs/src/content/ui/checkbox.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='checkbox/checkbox' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/checkbox.tsx']} deps={['@radix-ui/react-checkbox']} />
+
 ## Usage
 
 ```tsx
