--- a/apps/docs/src/content/ui/collapsible.mdx
+++ b/apps/docs/src/content/ui/collapsible.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='collapsible/collapsible' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/collapsible.tsx']} deps={['@radix-ui/react-collapsible']} />
+
 ## Usage
 
 ```tsx
