--- a/apps/docs/src/content/ui/context-menu.mdx
+++ b/apps/docs/src/content/ui/context-menu.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='context-menu/context-menu' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/context-menu.tsx']} deps={['@radix-ui/react-context-menu']} />
+
 ## Usage
 
 ```tsx
