--- a/apps/docs/src/content/ui/dialog.mdx
+++ b/apps/docs/src/content/ui/dialog.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='dialog/dialog' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/dialog.tsx']} deps={['@radix-ui/react-dialog']} />
+
 ## Usage
 
 ```tsx
