--- a/apps/docs/src/content/ui/drawer.mdx
+++ b/apps/docs/src/content/ui/drawer.mdx
@@ -6,6 +6,11 @@ doc: https://github.com/emilkowalski/vaul
 
 <ComponentPreview name='drawer/drawer' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/drawer.tsx']} deps={['vaul']} />
+
 ## Usage
 
 ```tsx
