--- a/apps/docs/src/content/ui/dropdown-menu.mdx
+++ b/apps/docs/src/content/ui/dropdown-menu.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='dropdown-menu/dropdown-menu' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/dropdown-menu.tsx']} deps={['@radix-ui/react-dropdown-menu']} />
+
 ## Usage
 
 ```tsx
