--- a/apps/docs/src/content/ui/form.mdx
+++ b/apps/docs/src/content/ui/form.mdx
@@ -6,6 +6,11 @@ doc: https://react-hook-form.com
 
 <ComponentPreview name='form/form' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/form.tsx']} deps={['@hookform/resolvers', 'react-hook-form', 'zod', '@radix-ui/react-slot']} />
+
 ## Usage
 
 ```tsx
