--- a/apps/docs/src/content/ui/input.mdx
+++ b/apps/docs/src/content/ui/input.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='input/input' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/input.tsx']} />
+
 ## Usage
 
 ```tsx
