--- a/apps/docs/src/content/ui/kbd.mdx
+++ b/apps/docs/src/content/ui/kbd.mdx
@@ -5,6 +5,11 @@ description: The Kbd component is used to represent user input.
 
 <ComponentPreview name='kbd/kbd' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/kbd.tsx']} />
+
 ## Usage
 
 ```tsx
