--- a/apps/docs/src/content/ui/link.mdx
+++ b/apps/docs/src/content/ui/link.mdx
@@ -5,6 +5,10 @@ description: A clickable element that navigates to another page or resource.
 
 <ComponentPreview name='link/link' />
 
+## Installation
+
+<ComponentInstallation paths={['components/link.tsx']} deps={['next/link']} />
+
 ## Usage
 
 ```tsx
