--- a/apps/docs/src/content/ui/menubar.mdx
+++ b/apps/docs/src/content/ui/menubar.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='menubar/menubar' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/menubar.tsx']} deps={['@radix-ui/react-menubar']} />
+
 ## Usage
 
 ```tsx
