--- a/apps/docs/src/content/ui/navigation-menu.mdx
+++ b/apps/docs/src/content/ui/navigation-menu.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='navigation-menu/navigation-menu' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/navigation-menu.tsx']} deps={['@radix-ui/react-navigation-menu']} />
+
 ## Usage
 
 ```tsx
