--- a/apps/docs/src/content/ui/popover.mdx
+++ b/apps/docs/src/content/ui/popover.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='popover/popover' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/popover.tsx']} deps={['@radix-ui/react-popover']} />
+
 ## Usage
 
 ```tsx
