--- a/apps/docs/src/content/ui/progress.mdx
+++ b/apps/docs/src/content/ui/progress.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='progress/progress' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/progress.tsx']} deps={['@radix-ui/react-progress']} />
+
 ## Usage
 
 ```tsx
