--- a/apps/docs/src/content/ui/radio-group.mdx
+++ b/apps/docs/src/content/ui/radio-group.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='radio-group/radio-group' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/radio-group.tsx']} deps={['@radix-ui/react-radio-group']} />
+
 ## Usage
 
 ```tsx
