--- a/apps/docs/src/content/ui/resizable.mdx
+++ b/apps/docs/src/content/ui/resizable.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='resizable/resizable' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/resizable.tsx']} deps={['react-resizable-panels']} />
+
 ## Usage
 
 ```tsx
