--- a/apps/docs/src/content/ui/scroll-area.mdx
+++ b/apps/docs/src/content/ui/scroll-area.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='scroll-area/scroll-area' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/scroll-area.tsx']} deps={['@radix-ui/react-scroll-area']} />
+
 ## Usage
 
 ```tsx
