--- a/apps/docs/src/content/ui/select.mdx
+++ b/apps/docs/src/content/ui/select.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='select/select' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/select.tsx']} deps={['@radix-ui/react-select']} />
+
 ## Usage
 
 ```tsx
