--- a/apps/docs/src/content/ui/separator.mdx
+++ b/apps/docs/src/content/ui/separator.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='separator/separator' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/separator.tsx']} deps={['@radix-ui/react-separator']} />
+
 ## Usage
 
 ```tsx
