--- a/apps/docs/src/content/ui/sheet.mdx
+++ b/apps/docs/src/content/ui/sheet.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='sheet/sheet' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/sheet.tsx']} deps={['@radix-ui/react-dialog']} />
+
 ## Usage
 
 ```tsx
