--- a/apps/docs/src/content/ui/skeleton.mdx
+++ b/apps/docs/src/content/ui/skeleton.mdx
@@ -5,6 +5,11 @@ description: A placeholder that mimics the layout of content while it's loading.
 
 <ComponentPreview name='skeleton/skeleton' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/skeleton.tsx']} />
+
 ## Usage
 
 ```tsx
