--- a/apps/docs/src/content/ui/slider.mdx
+++ b/apps/docs/src/content/ui/slider.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='slider/slider' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/slider.tsx']} deps={['@radix-ui/react-slider']} />
+
 ## Usage
 
 ```tsx
