--- a/apps/docs/src/content/ui/sonner.mdx
+++ b/apps/docs/src/content/ui/sonner.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='sonner/sonner' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/sonner.tsx']} deps={['sonner', 'next-themes']} />
+
 ## Usage
 
 ```tsx title='app/layout.tsx'
