--- a/apps/docs/src/content/ui/switch.mdx
+++ b/apps/docs/src/content/ui/switch.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='switch/switch' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/switch.tsx']} deps={['@radix-ui/react-switch']} />
+
 ## Usage
 
 ```tsx
