--- a/apps/docs/src/content/ui/table.mdx
+++ b/apps/docs/src/content/ui/table.mdx
@@ -5,6 +5,11 @@ description: A responsive table component wrapped in a scrollable container for 
 
 <ComponentPreview name='table/table' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/table.tsx']} />
+
 ## Usage
 
 ```tsx
