--- a/apps/docs/src/content/ui/tabs.mdx
+++ b/apps/docs/src/content/ui/tabs.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='tabs/tabs' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/tabs.tsx']} deps={['@radix-ui/react-tabs']} />
+
 ## Usage
 
 ```tsx
