--- a/apps/docs/src/content/ui/textarea.mdx
+++ b/apps/docs/src/content/ui/textarea.mdx
@@ -12,6 +12,11 @@ description: A multiline text input field for entering or editing larger amounts
   </AlertDescription>
 </Alert>
 
+
+## Installation
+
+<ComponentInstallation paths={['components/textarea.tsx']} deps={['react-textarea-autosize']} />
+
 ## Usage
 
 ```tsx
