--- a/apps/docs/src/content/ui/toggle-group.mdx
+++ b/apps/docs/src/content/ui/toggle-group.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='toggle-group/toggle-group' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/toggle-group.tsx']} deps={['@radix-ui/react-toggle-group']} />
+
 ## Usage
 
 ```tsx
