--- a/apps/docs/src/content/ui/toggle.mdx
+++ b/apps/docs/src/content/ui/toggle.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='toggle/toggle' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/toggle.tsx']} deps={['@radix-ui/react-toggle']} />
+
 ## Usage
 
 ```tsx
