--- a/apps/docs/src/content/ui/tooltip.mdx
+++ b/apps/docs/src/content/ui/tooltip.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='tooltip/tooltip' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/tooltip.tsx']} deps={['@radix-ui/react-tooltip']} />
+
 ## Usage
 
 ```tsx
