--- a/apps/docs/src/content/ui/alert.mdx
+++ b/apps/docs/src/content/ui/alert.mdx
@@ -5,6 +5,11 @@ description: Displays a callout for user attention.
 
 <ComponentPreview name='alert/alert' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/alert.tsx']} />
+
 ## Usage
 
 ```tsx
