--- a/apps/docs/src/content/ui/avatar.mdx
+++ b/apps/docs/src/content/ui/avatar.mdx
@@ -15,6 +15,11 @@ link:
   </AlertDescription>
 </Alert>
 
+
+## Installation
+
+<ComponentInstallation paths={['components/avatar.tsx']} deps={['@radix-ui/react-avatar']} />
+
 ## Usage
 
 ```tsx
