--- a/apps/docs/src/content/ui/code-block.mdx
+++ b/apps/docs/src/content/ui/code-block.mdx
@@ -12,6 +12,11 @@ description: A block of code that can be copied.
   </AlertDescription>
 </Alert>
 
+
+## Installation
+
+<ComponentInstallation paths={['components/code-block.tsx', 'utils/get-icon-by-language.ts']} deps={['merge-refs']} />
+
 ## Usage
 
 ```tsx
