--- a/apps/docs/src/content/ui/command.mdx
+++ b/apps/docs/src/content/ui/command.mdx
@@ -6,6 +6,11 @@ doc: https://cmdk.paco.me
 
 <ComponentPreview name='command/command' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/command.tsx']} deps={['cmdk']} />
+
 ## Usage
 
 ```tsx
