--- a/apps/docs/src/content/ui/data-table.mdx
+++ b/apps/docs/src/content/ui/data-table.mdx
@@ -13,6 +13,28 @@ description: Powerful table and datagrids built using TanStack Table.
   </AlertDescription>
 </Alert>
 
+## Installation
+
+<ComponentInstallation
+  paths={[
+    'components/data-table.tsx',
+    'components/data-table-column-header.tsx',
+    'components/data-table-date-filter.tsx',
+    'components/data-table-faceted-filter.tsx',
+    'components/data-table-pagination.tsx',
+    'components/data-table-skeleton.tsx',
+    'components/data-table-slider-filter.tsx',
+    'components/data-table-sort-list.tsx',
+    'components/data-table-toolbar.tsx',
+    'components/data-table-view-options.tsx',
+    'lib/data-table.ts',
+    'hooks/use-data-table.ts',
+    'hooks/use-callback-ref.ts',
+    'hooks/use-debounced-callback.ts'
+  ]}
+  deps={['@tanstack/react-table']}
+/>
+
 ## Usage
 
 See [shadcn-table](https://table.sadmn.com) for more information.
