--- a/apps/docs/src/content/ui/input-otp.mdx
+++ b/apps/docs/src/content/ui/input-otp.mdx
@@ -7,6 +7,8 @@ description: Accessible one-time password component with copy paste functionalit
 
 ## Installation
 
+<ComponentInstallation paths={['components/input-otp.tsx']} deps={['input-otp']} />
+
 ```css title='app/globals.css'
 @theme {
   --animate-caret-blink: caret-blink 1.25s ease-out infinite;
