--- a/apps/docs/src/content/ui/label.mdx
+++ b/apps/docs/src/content/ui/label.mdx
@@ -5,6 +5,11 @@ description: Renders an accessible label associated with controls.
 
 <ComponentPreview name='label/label' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/label.tsx']} deps={['@radix-ui/react-label']} />
+
 ## Usage
 
 ```tsx
