--- a/apps/docs/src/content/ui/marquee.mdx
+++ b/apps/docs/src/content/ui/marquee.mdx
@@ -7,6 +7,8 @@ description: A scrolling text or image display that moves across the screen.
 
 ## Installation
 
+<ComponentInstallation paths={['components/marquee.tsx']} />
+
 ```css title='app/globals.css'
 @theme {
   --animate-marquee-left: marquee-left var(--duration, 30s) linear infinite;
