--- a/apps/docs/src/content/ui/pagination.mdx
+++ b/apps/docs/src/content/ui/pagination.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='pagination/pagination' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/pagination.tsx']} deps={['@ark-ui/react']} />
+
 ## Usage
 
 ```tsx
