--- a/apps/docs/src/content/ui/segment-group.mdx
+++ b/apps/docs/src/content/ui/segment-group.mdx
@@ -8,6 +8,11 @@ link:
 
 <ComponentPreview name='segment-group/segment-group' />
 
+
+## Installation
+
+<ComponentInstallation paths={['components/segment-group.tsx']} deps={['@ark-ui/react']} />
+
 ## Usage
 
 ```tsx
