--- a/apps/docs/src/content/ui/tree-view.mdx
+++ b/apps/docs/src/content/ui/tree-view.mdx
@@ -10,6 +10,8 @@ link:
 
 ## Installation
 
+<ComponentInstallation paths={['components/tree-view.tsx']} deps={['@ark-ui/react']} />
+
 ```css title='app/globals.css'
 @theme {
   --animate-tree-view-content-down: tree-view-content-down 0.2s ease-out;
