style(docs): format mdx

--- a/apps/docs/src/content/ui/alert-dialog.mdx
+++ b/apps/docs/src/content/ui/alert-dialog.mdx
@@ -10,7 +10,10 @@ link:
 
 ## Installation
 
-<ComponentInstallation paths={['components/alert-dialog.tsx']} deps={['@radix-ui/react-alert-dialog']} />
+<ComponentInstallation
+  paths={['components/alert-dialog.tsx']}
+  deps={['@radix-ui/react-alert-dialog']}
+/>
 
 ## Usage
 
