--- a/apps/docs/src/content/ui/aspect-ratio.mdx
+++ b/apps/docs/src/content/ui/aspect-ratio.mdx
@@ -8,10 +8,12 @@ link:
 
 <ComponentPreview name='aspect-ratio/aspect-ratio' />
 
-
 ## Installation
 
-<ComponentInstallation paths={['components/aspect-ratio.tsx']} deps={['@radix-ui/react-aspect-ratio']} />
+<ComponentInstallation
+  paths={['components/aspect-ratio.tsx']}
+  deps={['@radix-ui/react-aspect-ratio']}
+/>
 
 ## Usage
 
