--- a/apps/docs/src/content/ui/collapsible.mdx
+++ b/apps/docs/src/content/ui/collapsible.mdx
@@ -8,10 +8,12 @@ link:
 
 <ComponentPreview name='collapsible/collapsible' />
 
-
 ## Installation
 
-<ComponentInstallation paths={['components/collapsible.tsx']} deps={['@radix-ui/react-collapsible']} />
+<ComponentInstallation
+  paths={['components/collapsible.tsx']}
+  deps={['@radix-ui/react-collapsible']}
+/>
 
 ## Usage
 
