--- a/apps/docs/src/content/ui/hover-card.mdx
+++ b/apps/docs/src/content/ui/hover-card.mdx
@@ -8,10 +8,12 @@ link:
 
 <ComponentPreview name='hover-card/hover-card' />
 
-
 ## Installation
 
-<ComponentInstallation paths={['components/hover-card.tsx']} deps={['@radix-ui/react-hover-card']} />
+<ComponentInstallation
+  paths={['components/hover-card.tsx']}
+  deps={['@radix-ui/react-hover-card']}
+/>
 
 ## Usage
 
