--- a/apps/docs/src/content/ui/navigation-menu.mdx
+++ b/apps/docs/src/content/ui/navigation-menu.mdx
@@ -8,10 +8,12 @@ link:
 
 <ComponentPreview name='navigation-menu/navigation-menu' />
 
-
 ## Installation
 
-<ComponentInstallation paths={['components/navigation-menu.tsx']} deps={['@radix-ui/react-navigation-menu']} />
+<ComponentInstallation
+  paths={['components/navigation-menu.tsx']}
+  deps={['@radix-ui/react-navigation-menu']}
+/>
 
 ## Usage
 
