--- a/apps/docs/src/content/ui/radio-group.mdx
+++ b/apps/docs/src/content/ui/radio-group.mdx
@@ -8,10 +8,12 @@ link:
 
 <ComponentPreview name='radio-group/radio-group' />
 
-
 ## Installation
 
-<ComponentInstallation paths={['components/radio-group.tsx']} deps={['@radix-ui/react-radio-group']} />
+<ComponentInstallation
+  paths={['components/radio-group.tsx']}
+  deps={['@radix-ui/react-radio-group']}
+/>
 
 ## Usage
 
