--- a/apps/docs/src/content/ui/scroll-area.mdx
+++ b/apps/docs/src/content/ui/scroll-area.mdx
@@ -8,10 +8,12 @@ link:
 
 <ComponentPreview name='scroll-area/scroll-area' />
 
-
 ## Installation
 
-<ComponentInstallation paths={['components/scroll-area.tsx']} deps={['@radix-ui/react-scroll-area']} />
+<ComponentInstallation
+  paths={['components/scroll-area.tsx']}
+  deps={['@radix-ui/react-scroll-area']}
+/>
 
 ## Usage
 
