--- a/apps/docs/src/content/ui/sidebar.mdx
+++ b/apps/docs/src/content/ui/sidebar.mdx
@@ -7,4 +7,7 @@ description: A composable, themeable and customizable sidebar component.
 
 ## Installation
 
-<ComponentInstallation paths={['components/sidebar.tsx', 'hooks/use-is-mobile.ts']} deps={['@radix-ui/react-slot']} />
+<ComponentInstallation
+  paths={['components/sidebar.tsx', 'hooks/use-is-mobile.ts']}
+  deps={['@radix-ui/react-slot']}
+/>
