--- a/apps/docs/src/content/ui/sortable.mdx
+++ b/apps/docs/src/content/ui/sortable.mdx
@@ -5,10 +5,18 @@ description: A drag and drop sortable component for reordering items.
 
 <ComponentPreview name='sortable/sortable' />
 
-
 ## Installation
 
-<ComponentInstallation paths={['components/sortable.tsx', 'lib/composition.ts']} deps={['@dnd-kit/core', '@dnd-kit/modifiers', '@dnd-kit/sortable', '@dnd-kit/utilities', '@radix-ui/react-slot']} />
+<ComponentInstallation
+  paths={['components/sortable.tsx', 'lib/composition.ts']}
+  deps={[
+    '@dnd-kit/core',
+    '@dnd-kit/modifiers',
+    '@dnd-kit/sortable',
+    '@dnd-kit/utilities',
+    '@radix-ui/react-slot'
+  ]}
+/>
 
 ## Usage
 
