--- a/apps/docs/src/content/ui/combobox.mdx
+++ b/apps/docs/src/content/ui/combobox.mdx
@@ -7,7 +7,10 @@ description: Autocomplete input and command palette with a list of suggestions.
 
 ## Installation
 
-<ComponentInstallation paths={['components/combobox.tsx']} deps={['@radix-ui/react-popover', 'cmdk']} />
+<ComponentInstallation
+  paths={['components/combobox.tsx']}
+  deps={['@radix-ui/react-popover', 'cmdk']}
+/>
 
 The Combobox is built using a composition of the `<Popover />{:tsx}` and the `<Command />{:tsx}` components.
 
