--- a/apps/docs/src/content/packages/prettier-config.mdx
+++ b/apps/docs/src/content/packages/prettier-config.mdx
@@ -8,11 +8,5 @@ description: The prettier config for tszhong0411's projects
 You can install the prettier config package and its peer dependencies using your preferred package manager:
 
 ```bash
-npm i @tszhong0411/prettier-config prettier-plugin-packagejson prettier-plugin-tailwindcss
-# or
-pnpm add @tszhong0411/prettier-config prettier-plugin-packagejson prettier-plugin-tailwindcss
-# or
-yarn add @tszhong0411/prettier-config prettier-plugin-packagejson prettier-plugin-tailwindcss
-# or
-bun add @tszhong0411/prettier-config prettier-plugin-packagejson prettier-plugin-tailwindcss
+pnpm add -D @tszhong0411/prettier-config prettier-plugin-packagejson prettier-plugin-tailwindcss
 ```
