feat(docs): add CodeFromFile component for displaying code snippets from files

--- a/apps/docs/src/content/getting-started/ui.mdx
+++ b/apps/docs/src/content/getting-started/ui.mdx
@@ -18,10 +18,14 @@ pnpm add @tszhong0411/utils cva@1.0.0-beta.4 lucide-react
 
 ```css title='globals.css'
 @import 'tailwindcss';
-@import '@tszhong0411/ui/styles/preset.css';
-@import '@tszhong0411/ui/styles/shiki.css'; /* Optional */
-@import '@tszhong0411/ui/styles/typography.css'; /* Optional */
+@import './preset.css';
+@import './shiki.css'; /* Optional */
+@import './typography.css'; /* Optional */
 ```
+
+<CodeFromFile filePath='packages/ui/src/styles/preset.css' title='preset.css' />
+<CodeFromFile filePath='packages/ui/src/styles/shiki.css' title='shiki.css' />
+<CodeFromFile filePath='packages/ui/src/styles/typography.css' title='typography.css' />
 
 ## Usage
 
