feat(i18n): update site description

--- a/packages/i18n/src/messages/zh-CN.json
+++ b/packages/i18n/src/messages/zh-CN.json
@@ -73,7 +73,7 @@
       "toggle-italic": "切换斜体",
       "toggle-strikethrough": "切换删除线"
     },
-    "description": "我的个人网站和博客，分享我对各种主题的想法，包括教学、笔记和个人经验。作为一名来自香港的全端工程师，我在 2020 年 12 月开始把学习网页开发当成一种兴趣。我使用 Next.js 建立网站，GitHub 用作源代码托管，Vercel 用作部署。探索我的网站，了解更多关于我的旅程，并发现一些启发我的网页开发资源。",
+    "description": "我的个人网站和博客，分享我对各种主题的想法，包括教学、笔记和个人经验。作为一名来自香港的全栈工程师，我在 2020 年 12 月开始把学习网页开发当成一种兴趣。我使用 Next.js 建立网站，GitHub 用作源代码托管，Vercel 用作部署。探索我的网站，了解更多关于我的旅程，并发现一些启发我的网页开发资源。",
     "footer": {
       "edit-on-github": "在 GitHub 上编辑",
       "last-updated": "最后更新日期：{date}"
@@ -191,7 +191,7 @@
       "title-bottom": "并使用 React 开发",
       "title-middle-left": "制作",
       "title-middle-right": "的网站",
-      "title-top": "我是 Nelson，一位全端工程师"
+      "title-top": "我是 Nelson，一位全栈工程师"
     },
     "latest-articles": {
       "card": "文章",
@@ -237,8 +237,8 @@
     "link-to-section": "连结至章节"
   },
   "metadata": {
-    "site-description": "Nelson Lai • 19 y/o • 学生 • 全端工程师",
-    "site-title": "Nelson Lai - 一名全端工程师"
+    "site-description": "Nelson Lai 是一位居住于香港的全栈工程师。他使用 React、Node.js 和现代技术构建高效且优雅的网站。",
+    "site-title": "Nelson Lai - 一名全栈工程师"
   },
   "not-found": "找不到页面！",
   "projects": {
