--- a/packages/i18n/src/messages/zh-TW.json
+++ b/packages/i18n/src/messages/zh-TW.json
@@ -237,7 +237,7 @@
     "link-to-section": "連結至章節"
   },
   "metadata": {
-    "site-description": "Nelson Lai • 19 y/o • 學生 • 全端工程師",
+    "site-description": "Nelson Lai 是一位居住於香港的全端工程師。他使用 React、Node.js 和現代技術構建高效且優雅的網站。",
     "site-title": "Nelson Lai - 一名全端工程師"
   },
   "not-found": "找不到頁面！",
