--- a/packages/i18n/src/messages/en.json
+++ b/packages/i18n/src/messages/en.json
@@ -237,7 +237,7 @@
     "link-to-section": "Link to section"
   },
   "metadata": {
-    "site-description": "Nelson Lai • 19 y/o • Student • Full Stack Engineer",
+    "site-description": "Nelson Lai is a full stack engineer based in Hong Kong. He builds performant and elegant websites using React, Node.js, and modern technologies.",
     "site-title": "Nelson Lai - A Full Stack Engineer"
   },
   "not-found": "Page Not Found!",
