--- a/apps/docs/src/content/getting-started/ui.mdx
+++ b/apps/docs/src/content/getting-started/ui.mdx
@@ -14,6 +14,7 @@ description: A collection of UI components.
 
 ```bash
 pnpm add @tszhong0411/utils cva@1.0.0-beta.4 lucide-react
+pnpm add -D tw-animate-css
 ```
 
 ```css title='globals.css'
