refactor: update nuqs dependency and add usage notes for data table

--- a/apps/docs/src/content/ui/data-table.mdx
+++ b/apps/docs/src/content/ui/data-table.mdx
@@ -32,9 +32,13 @@ description: Powerful table and datagrids built using TanStack Table.
     'hooks/use-callback-ref.ts',
     'hooks/use-debounced-callback.ts'
   ]}
-  deps={['@tanstack/react-table']}
+  deps={['@tanstack/react-table', 'nuqs']}
 />
 
 ## Usage
 
 See [shadcn-table](https://table.sadmn.com) for more information.
+
+## Notes
+
+Make sure you have set up the Nuqs adapter correctly. Read [https://nuqs.47ng.com/docs/adapters](https://nuqs.47ng.com/docs/adapters) for more.
