--- a/packages/i18n/src/messages/en.json
+++ b/packages/i18n/src/messages/en.json
@@ -23,17 +23,12 @@
     "table": {
       "comments": {
         "body": "Body",
-        "failed-to-fetch-comments-data": "Failed to fetch comments data. Please refresh the page.",
-        "filter-body": "Filter body...",
-        "filter-userId": "Filter user ID...",
         "type": "Type",
         "userId": "User ID"
       },
       "createdAt": "Created At",
       "users": {
         "email": "Email",
-        "failed-to-fetch-users-data": "Failed to fetch users data. Please refresh the page.",
-        "filter-names": "Filter names...",
         "name": "Name",
         "role": "Role"
       }
@@ -42,7 +37,6 @@
   "blog": {
     "comments": {
       "author": "Author",
-      "comment-cannot-be-empty": "Comment cannot be empty",
       "comment-posted": "Comment posted",
       "comments": "{count, plural, =1 {comment} other {comments}}",
       "confirm-delete-comment": "Are you sure you want to delete this comment? This action cannot be undone.",
@@ -50,12 +44,9 @@
       "delete-a-comment": "Delete a comment",
       "deleted-a-comment": "Deleted a comment",
       "dislike": "Dislike",
-      "failed-to-load-comments": "Failed to load comments. Please refresh the page.",
-      "failed-to-load-replies": "Failed to load replies. Please refresh the page.",
       "highlighted-comment": "Highlighted comment",
       "like": "Like",
       "link-copied": "Link copied to clipboard",
-      "need-logged-in-to-vote": "You need to be logged in to vote comments",
       "newest": "Newest",
       "no-comments": "No comments",
       "oldest": "Oldest",
@@ -63,7 +54,6 @@
       "placeholder": "Leave a comment",
       "replies": "{count, plural, =1 {reply} other {replies}}",
       "reply": "Reply",
-      "reply-cannot-be-empty": "Reply cannot be empty",
       "reply-posted": "Reply posted",
       "reply-to-comment": "Reply to comment",
       "send-comment": "Send comment",
@@ -85,7 +75,6 @@
       "written-by": "Written by"
     },
     "like": "Like",
-    "like-limit-reached": "You can only like 3 times per post",
     "like-this-post": "Like this post",
     "on-this-page": "On this page",
     "title": "Blog"
@@ -110,7 +99,6 @@
     "error": "Error",
     "likes": "{count, plural, =1 {# like} other {# likes}}",
     "sign-in": "Sign in",
-    "sign-in-error": "Failed to sign in. Please try again.",
     "sign-out": "Sign out",
     "views": "{count, plural, =1 {# view} other {# views}}"
   },
@@ -142,8 +130,22 @@
     }
   },
   "error": {
+    "failed-to-fetch-comments-data": "Failed to fetch comments data. Please refresh the page.",
+    "failed-to-fetch-users-data": "Failed to fetch users data. Please refresh the page.",
+    "comment-cannot-be-empty": "Comment cannot be empty",
+    "failed-to-load-comments": "Failed to load comments. Please refresh the page.",
+    "failed-to-load-replies": "Failed to load replies. Please refresh the page.",
+    "need-logged-in-to-vote": "You need to be logged in to vote comments",
+    "reply-cannot-be-empty": "Reply cannot be empty",
+    "like-limit-reached": "You can only like 3 times per post",
+    "sign-in-error": "Failed to sign in. Please try again.",
     "something-went-wrong": "Something went wrong!",
-    "try-again": "Try again"
+    "try-again": "Try again",
+    "failed-to-load-messages": "Failed to load messages. Please refresh the page.",
+    "message-cannot-be-empty": "Message cannot be empty",
+    "copy-to-clipboard-error": "Unable to copy to clipboard. Please try again!",
+    "now-playing-error": "Failed to fetch Spotify data",
+    "not-found": "Page Not Found!"
   },
   "guestbook": {
     "create-message-successfully": "Create message successfully",
@@ -153,8 +155,6 @@
     },
     "delete-message-successfully": "Delete message successfully",
     "description": "Sign my guestbook and share your idea. You can tell me anything here!",
-    "failed-to-load-messages": "Failed to load messages. Please refresh the page.",
-    "message-cannot-be-empty": "Message cannot be empty",
     "no-messages": "No messages. Be the first to leave a message!",
     "pinned": {
       "description": "Thanks for visiting my website. If you have a moment, I'd love to hear your thoughts on my work. Please log in with your account to leave a comment. Thanks!",
@@ -206,8 +206,7 @@
   },
   "hook": {
     "copy-to-clipboard": {
-      "copied": "Copied to clipboard!",
-      "error": "Unable to copy to clipboard. Please try again!"
+      "copied": "Copied to clipboard!"
     }
   },
   "layout": {
@@ -222,7 +221,6 @@
     "instagram": "Instagram",
     "links": "Links",
     "now-playing": {
-      "error": "Failed to fetch Spotify data",
       "loading": "Loading ...",
       "not-listening": "Not Listening - Spotify"
     },
@@ -240,7 +238,6 @@
     "site-description": "Nelson Lai is a full stack engineer based in Hong Kong. He builds performant and elegant websites using React, Node.js, and modern technologies.",
     "site-title": "Nelson Lai - A Full Stack Engineer"
   },
-  "not-found": "Page Not Found!",
   "projects": {
     "description": "The list of my projects. Everything was made with ❤️.",
     "title": "Projects",
