refactor: standardize comment capitalization across multiple files

--- a/apps/docs/src/content/recipes/drizzle.mdx
+++ b/apps/docs/src/content/recipes/drizzle.mdx
@@ -35,7 +35,7 @@ export const env = createEnv({
   server: {
     DATABASE_URL: z.string().url() // [!code ++]
   }
-  // other configs
+  // Other configs
 })
 ```
 
