fix: standardize comment capitalization for consistency

--- a/apps/web/src/content/blog/en/php.mdx
+++ b/apps/web/src/content/blog/en/php.mdx
@@ -142,7 +142,7 @@ There are two string operators. The first is the concatenation operator ("."), w
     $value3 = 1 * 1 // Times
     $value4 = 1 / 1 // Divide
     $value5 = 12 / 5 // Divide | Incomplete division will become float, which is different from other programming languages, php will calculate the remainder
-    $value6 = 3 % 5 // take the remainder
+    $value6 = 3 % 5 // Take the remainder
 ?>
 ```
 
